--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.21.0",
     "@tailwindcss/vite": "^4.1.7",
     "firebase": "^11.8.1",
     "react": "^19.1.0",
